setup required environment configurations

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+########################Start: C Programming Language###########################
 # Prerequisites
 *.d
 
@@ -30,3 +31,9 @@
 *.exe
 *.out
 *.app
+#########################End: C Programming Language############################
+
+######################Start: Java Programming Language##########################
+# Java Code Style Check tool
+checkstyle.jar
+#######################End: Java Programming Language###########################
