--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 leetcode/leetcode-cli
+leetcode/leetcode-cli-plugins
 ########################Start: C Programming Language###########################
 # Prerequisites
 *.d
